--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,16 @@
 h1{
 	font-family: 'Prompt', sans-serif;
-
+	font-size: 2.4rem;
 }
 
-p{
+h2,h3,p{
 	font-family: 'Noto Sans JP', sans-serif;
+
+}
+h2{
+	font-size: 14pt;
+}
+p{
 	font-size: 12pt;
 
 }
